Fix: Moved menu button to right side on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -33,7 +33,6 @@ ul {
   list-style: none;
   font-weight: 700;
   font-family: 'xol';
-  left: 0;
   top:-0%;
   background: var(--background);
   color: var(--text-color);
@@ -91,6 +90,7 @@ li {
   height: 12px;
   background: var(--text-color);
   transition: all .8s;
+  pointer-events: none;
 }
 
 
@@ -100,7 +100,7 @@ li {
     text-align: center;
     padding: 133px;
     position: relative;
-    left: 36%;
+    left: 3%;
     top: 37%;
     cursor: pointer;
     transition: top .8s,left .8s,transform .8s;
@@ -108,6 +108,8 @@ li {
 
 
 .main {
+      
+
 
   position: relative;
   padding: 0;
@@ -120,12 +122,15 @@ li {
 
 
 .menu {
+
+
   overflow: hidden;
   border-radius: 50%;
   width: 60vw;
   height: 60vw;
   top: -14%;
-  left: -22%;
+  right: -23%;
+
   transition: height .8s, width .8s;
   
 }
